k8s/apps/dev-tech-news/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-tech-news-web
  namespace: matflixlab
spec:
  selector:
    app: dev-tech-news-web
  ports:
    - port: 80
      targetPort: 80
