k8s/apps/dev-tech-news/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-tech-news
  namespace: matflixlab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: news.matflixlab.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-tech-news-web
                port:
                  number: 80
